Chapter 08/q6/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cka-q7-netpol
  namespace: live
spec:
  podSelector:
    matchLabels:
      run: source-app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: customer
      ports:
        - protocol: TCP
          port: 80
